# task-planner

./: README.md
task-planner-server/: .gitignore  Cargo.toml
task-planner-server/migrations/2021-03-13-160914_create_users/: up.sql
task-planner-server/migrations/2021-03-14-190929_create_tasks_table/: up.sql
task-planner-server/migrations/2021-05-14-141223_create_plans_table/: up.sql
task-planner-server/src/: connection.rs  helper.rs  lib.rs  models.rs  plans.rs  schema.rs  tasks.rs  users.rs  util.rs
task-planner-server/templates/: index.html.tera  tasks.html.tera
