[package]
name = "task-planner-server"
version = "0.1.0"
authors = ["Harrison McCullough <mccullough.harrison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2"] }
dotenv = "0.15.0"
chrono = "0.4"
rocket = "0.4.7"
r2d2 = "0.7"
